templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleci-runners-ingress
  labels:
    app: cci-runners-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: cci-runner-ingress.dev.iad.co.mediamath.com
    external-dns.alpha.kubernetes.io/ttl: "60"
    traefik.ingress.kubernetes.io/router.entrypoints: ssh
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: cci-runner-ingress.dev.iad.co.mediamath.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cci-runner-poc-svc
            port:
              number: 54782
